static/specs/istio/reviews-destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: reviews
spec:
  host: reviews
  subsets:
  - name: v1  # <1>
    labels:
      version: v1
  - name: v2  # <2>
    labels:
      version: v2
  - name: v3  # <3>
    labels:
      version: v3
