static/specs/istio/reviews-virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - weight: 10  # <1>
      destination:
        host: reviews
        subset: v1
    - weight: 30  # <2>
      destination:
        host: reviews
        subset: v2
    - weight: 60  # <3>
      destination:
        host: reviews
        subset: v3
